# purchase_order_automation

./: README.md  pyproject.toml
.github/workflows/: ci.yml
purchase_automation/: hooks.py  modules.txt
purchase_automation/custom_script/: sales_order.py
